<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:text="@string/menu_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"/>

    <Button
        android:id="@+id/btnAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_animation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <Button
        android:id="@+id/btnQuickCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_quickcall"/>
</LinearLayout>
